--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,10 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0;
 }
 
+p {
+    margin: 0 0 10px;
+}
+
 ul, ol {
     margin: 0;
     padding: 0;
@@ -233,9 +237,80 @@ z-index: 1000;
 /* Services */
 .servises {
     display: flex;
+    flex-wrap: wrap;
+    position: relative;
+    padding: 35px 0 50px;
+    background: #fff;
+    border-radius: 5px;
+    box-shadow: 0 5px 30px 
+    rgba(0, 0, 0, .10);
 }
 
 .services__item {
+    display: flex;
+    flex-direction: column;
     width: 25%;
-    padding: 25px;
+    padding: 0 25px;
+    margin-bottom: 30px;
+}
+
+.services__title {
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-family: 'Lato', sans-serif;
+    color: #2C2C2C;
+    font-weight: 900;
+    line-height: 1.2;
+}
+
+.services__text {
+    margin-bottom: 20px;
+    font-size: 15px;
+    color: #585858;
+    line-height: 1.4;
+}
+
+.services__footer {
+    margin-top: auto;
+}
+
+.services__link {
+    display: inline-block;
+    color: #004AF2;
+    font-size: 15px;
+    text-decoration: none;
+    transition: color .2s linear;
+}
+
+.services__link:hover {
+    color: #FF3E2F;
+}
+
+.services__link::after {
+    content: '';
+    display: block;
+    width: 10px;
+    height: 2px;
+    background-color: #004AF2;
+    transition: width .2s linear;
+    margin-top: 5px;
+}
+
+.services__link:hover::after {
+    width: 100%;
+    background-color: #FF3E2F;
+}
+
+.services__mail-title {
+    position: absolute;
+    bottom: 13px;
+    right: 30px;
+    z-index: 1;
+    pointer-events: none;
+    font-family: 'Lato', sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 90px;
+    line-height: 1;
+    color: rgba(44, 44, 44, 0.05);
 }
