--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ ul, ol {
 width: 100%;
 height: 85px;
 background: rgba(0, 0, 0, 0.2);
-position: fixed;
+position: fixed; /* зафиксировать шапку */
 top: 0;
 right: 0;
 left: 0;
@@ -49,7 +49,7 @@ z-index: 1000;
 }
 
 .header__inner {
-    display: flex;
+    display: flex; /* отцентровать вертикаль */
     height: 85px;
     justify-content: space-between;
     align-items: center;
@@ -365,6 +365,81 @@ z-index: 1000;
     font-size: 18px;
     margin-left: 40px;
     padding-top: 5px;
+    background: url(../images/heart.svg) no-repeat left 19px top;
+}
 
-    background: url(../images/heart.svg) no-repeat left 20px top;
+
+/* Rewiews */
+.rewiews {
+    position: relative;
+}
+
+.rewiews::before {
+    content: '';
+    display: block;
+    width: 92px;
+    height: 126px;
+
+    background: url(../images/lines.svg) no-repeat;
+
+    position: absolute;
+    top: -15px;
+    left: 2px;
+    z-index: 1;
+}
+
+.rewiews__header {
+    display: flex;
+    align-items: center; /* отцентровать вертикаль */
+    margin-bottom: 30px;
+}
+
+.rewiews__photo {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    border: 5px solid #fff;
+    box-shadow: 0 3px 6px rgba(0, 0, 0, .16);
+    position: relative;
+    z-index: 2;
+}
+
+.rewiews_header-content {
+    flex-grow: 1;
+    padding-left: 20px;
+    font-family: 'Lato', sans-serif;
+}
+
+.rewiews__name {
+    font-size: 18px;
+    font-weight: 900;
+    color: #2C2C2C;
+
+}
+
+.rewiews__company {
+    font-size: 15px;
+    color: #2C2C2C;
+}
+
+.rewiews__content {
+    font-family: 'Lato', sans-serif;
+    line-height: 1.8;
+    font-size: 15px;
+    font-weight: 400;
+    color: #585858;
+}
+
+.rewiews__content p {
+    margin-bottom: 20px;
+}
+
+
+/* Benefits */
+.benefits {
+     display: flex;
+}
+
+.benefits__koll {
+    width: 50%;
 }
