--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,12 @@ ul, ol {
     list-style: none;
 }
 
+.img {
+     display: block;
+     max-width: 100%;
+     height: auto;
+}
+
 /* container */
 .container {
     width: 100%;
@@ -232,6 +238,10 @@ z-index: 1000;
 /* Section */
 .section {
     padding: 60px 0;
+}
+
+.section--gray {
+    background-color: #F9F9F9;
 }
 
 .section__title {
@@ -440,6 +450,79 @@ z-index: 1000;
      display: flex;
 }
 
-.benefits__koll {
+.benefits__сol {
     width: 50%;
+}
+
+.benefits-list {
+    max-width: 370px;
+    width: 100%;
+    padding-left: 50px;
+    position: relative;
+
+    background-image: linear-gradient(to bottom, #fff 40%, #a5a5a5 40%);
+    background-size: 2px 30px;
+    background-repeat : repeat-y;
+    background-position: left 12px top 0;
+}
+
+.benefits-list:before,
+.benefits-list:after {
+     content: '';
+     display: block;
+     width: 26px;
+     height: 36px;
+
+     background-repeat: no-repeat;
+     background-color: #fff;
+     position: absolute;
+     left: 0;
+     z-index: 1;
+}
+
+.benefits-list:before {
+    background-image: url(../images/pin-start.svg);
+    top: -5px;
+}
+
+.benefits-list:after {
+    background-image: url(../images/pin-end.svg);
+    bottom: -8px;
+}
+
+.benefits-list__item:not(:last-child) {
+    margin-bottom: 35px;
+}
+
+.benefits-list__title {
+    font-family: 'Lato', sans-serif;
+    font-size: 21px;
+    font-weight: 900;
+    color: #2C2C2C ;
+    line-height: 1.2;
+    margin-bottom: 10px;
+}
+
+.benefits-list__text {
+    font-size: 15px;
+    font-weight: 400;
+    font-family: 'PT Sans', sans-serif;
+    color: #585858 ;
+}
+
+.img--skrugl {
+    border-radius: 5px;
+}
+
+
+/* Team */
+.team {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -15px;
+}
+
+.team__col {
+    width: 33.3333%;
+    padding: 0 15px;
 }
