--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,528 +1,565 @@
 body {
-    margin: 0;
-    font-family: 'PT Sans', sans-serif;
-    font-size: 15px;
-    color: #585858;
-    line-height: 1.5;
-    background-color: #fff;
+  margin: 0;
+  font-family: "PT Sans", sans-serif;
+  font-size: 15px;
+  color: #585858;
+  line-height: 1.4;
+  background-color: #fff;
 }
 
 *,
 *:before,
 *:after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
 
 p {
-    margin: 0 0 10px;
+  margin: 0 0 10px;
 }
 
-ul, ol {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .img {
-     display: block;
-     max-width: 100%;
-     height: auto;
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.img--skrugl {
+  border-radius: 5px;
 }
 
 /* container */
 .container {
-    width: 100%;
-    max-width: 1230px;
-    margin: 0 auto;
-    padding: 0 15px;
+  width: 100%;
+  max-width: 1230px;
+  margin: 0 auto;
+  padding: 0 15px;
 }
-
 
 /* Header */
 .header {
-width: 100%;
-height: 85px;
-background: rgba(0, 0, 0, 0.2);
-position: fixed; /* зафиксировать шапку */
-top: 0;
-right: 0;
-left: 0;
-z-index: 1000;
+  width: 100%;
+  height: 85px;
+  background: rgba(0, 0, 0, 0.2);
+  position: fixed; /* зафиксировать шапку */
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 1000;
 }
 
 .header__inner {
-    display: flex; /* отцентровать вертикаль */
-    height: 85px;
-    justify-content: space-between;
-    align-items: center;
+  display: flex; /* отцентровать вертикаль */
+  height: 85px;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* Nav */
 .nav {
-    font-size: 15px;
-    display: flex;
-    height: 100%;
+  font-size: 15px;
+  display: flex;
+  height: 100%;
 }
 
 .nav__link {
-    display: flex;
-    align-items: center;
-    padding: 0 15px;
-    color: #fff;
-    text-decoration: none; 
-} 
+  display: flex;
+  align-items: center;
+  padding: 0 15px;
+  color: #fff;
+  text-decoration: none;
+}
 
 .nav__link.active {
-    background-color: #004AF2;
-
-} 
-
+  background-color: #004af2;
+}
 
 /* Intro */
 .intro {
-    margin-bottom: 30px;
-    background: #000 url(../images/intro-bg2.jpg) no-repeat center;
-    background-size: cover;
+  margin-bottom: 30px;
+  background: #000 url(../images/intro-bg2.jpg) no-repeat center;
+  background-size: cover;
 }
 
 .intro__inner {
-    height: 600px;
-    display: flex;
-    align-items: flex-end;
-    justify-content: space-between;
+  height: 600px;
+  display: flex;
+  align-items: flex-end;
+  justify-content: space-between;
 }
 
 .intro__text {
-    text-align: right;
-    margin-bottom: 45px;
+  text-align: right;
+  margin-bottom: 45px;
 }
 
 .intro__countries {
-    color: #fff;
-    font-size: 15px;
+  color: #fff;
+  font-size: 15px;
 }
 
 .intro__title {
-    position: relative;
-    font-family: 'Lato', sans-serif;
-    font-size: 110px;
-    line-height: 0.9;
-    color: rgba(255, 255, 255, 0.8);
-    font-weight: 700;
+  position: relative;
+  font-family: "Lato", sans-serif;
+  font-size: 110px;
+  line-height: 0.9;
+  color: rgba(255, 255, 255, 0.8);
+  font-weight: 700;
 }
 
 .intro__title-amp {
-    position: absolute;
-    line-height: 1;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    font-size: 170px;
-    font-weight: 900;
-    color: rgba(255, 255, 255, 0.2);
+  position: absolute;
+  line-height: 1;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 170px;
+  font-weight: 900;
+  color: rgba(255, 255, 255, 0.2);
 }
-
 
 /* Reqest form */
 .reqest-form {
-    max-width: 400px;
-    width: 100%;
-    background-color: #004AF2;
-    overflow: hidden;
-    border-radius: 5px;
+  max-width: 400px;
+  width: 100%;
+  background-color: #004af2;
+  overflow: hidden;
+  border-radius: 5px;
 }
 
 .reqest-form--intro {
-    position: relative;
-    bottom: -30px;
+  position: relative;
+  bottom: -30px;
 }
 
 .reqest-form__header {
-    padding: 20px 30px;
-    background-color: #033FC9;
+  padding: 20px 30px;
+  background-color: #033fc9;
 }
 
 .reqest-form__title {
-    font-family: 'lato' sans-serif;
-    font-size: 30px;
-    font-weight: 900;
-    color: #fff;
+  font-family: "lato" sans-serif;
+  font-size: 30px;
+  font-weight: 900;
+  color: #fff;
 }
 
 .reqest-form__text {
-    font-size: 15px;
-    color: #fff;
-    line-height: 1.4;
+  font-size: 15px;
+  color: #fff;
 }
 
 .reqest-form__content {
-    padding: 30px;
+  padding: 30px;
 }
-
 
 /* Form */
 
 .form__group {
-    margin-bottom: 25px;
+  margin-bottom: 25px;
 }
 
 .input {
-    display: block;
-    width: 100%;
-    background: none;
-    border: none;
-    padding-left: 50px;
-    padding-bottom: 12px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
-    font-family: 'PT Sans', sans-serif;
-    color: #fff;
-    font-size: 16px;
-    transition: border-color .3s linear;
+  display: block;
+  width: 100%;
+  background: none;
+  border: none;
+  padding-left: 50px;
+  padding-bottom: 12px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+  font-family: "PT Sans", sans-serif;
+  color: #fff;
+  font-size: 16px;
+  transition: border-color 0.3s linear;
 }
 
 .input::placeholder {
-    color: #fff;
+  color: #fff;
 }
 
 .input:focus {
-    outline: none;
-    border-bottom-color: #fff;
+  outline: none;
+  border-bottom-color: #fff;
 }
 
 .input--user {
-    background: url(../images/user-icon.svg) left 15px top 5px no-repeat;
+  background: url(../images/user-icon.svg) left 15px top 5px no-repeat;
 }
 
 .input--phone {
-    background: url(../images/phone-icon.svg) left 15px top 5px no-repeat;
+  background: url(../images/phone-icon.svg) left 15px top 5px no-repeat;
 }
 
 .input--email {
-    background: url(../images/mail-icon.svg) left 15px top 7px no-repeat;
+  background: url(../images/mail-icon.svg) left 15px top 7px no-repeat;
 }
-
 
 /* Btn */
 .btn {
-    padding: 15px 45px;
-    display: inline-block;
-    vertical-align: middle;
-    font-family: 'PT Sans', sans-serif;
-    color: #fff;
-    font-size: 18px;
-    font-weight: 700;
-    line-height: 1.1;
-    text-align: center;
-    text-decoration: none;
-    border: none;
-    cursor: pointer;
-    background-color: #000;
-    border-radius: 5px;
+  padding: 15px 45px;
+  display: inline-block;
+  vertical-align: middle;
+  font-family: "PT Sans", sans-serif;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 1.1;
+  text-align: center;
+  text-decoration: none;
+  border: none;
+  cursor: pointer;
+  background-color: #000;
+  border-radius: 5px;
 }
 
 .btn--block {
-    display: block;
-    width: 100%;
+  display: block;
+  width: 100%;
 }
 
 .btn--orange {
-    background-image: linear-gradient(90deg, #FF903E 0%, #FF2C2C 100%);
-
+  background-image: linear-gradient(90deg, #ff903e 0%, #ff2c2c 100%);
 }
-
 
 /* Section */
 .section {
-    padding: 60px 0;
+  padding: 60px 0;
 }
 
 .section--gray {
-    background-color: #F9F9F9;
+  background-color: #f9f9f9;
 }
 
 .section__title {
-    font-family: 'Lato', sans-serif;
-    font-size: 45px;
-    color: #2C2C2C;
-    font-weight: 900;
-    line-height: 1.2;
-    margin-bottom: 40px;
+  font-family: "Lato", sans-serif;
+  font-size: 45px;
+  color: #2c2c2c;
+  font-weight: 900;
+  line-height: 1.2;
+  margin-bottom: 40px;
 }
 
 .section__title span {
-    color: #004AF2;
+  color: #004af2;
 }
 
 .section--map {
-    background: url(../images/map.svg) no-repeat left 30px top 130px;
+  background: url(../images/map.svg) no-repeat left 30px top 130px;
 }
 
 /* Services */
 .servises {
-    display: flex;
-    flex-wrap: wrap;
-    position: relative;
-    padding: 35px 0 50px;
-    background: #fff;
-    border-radius: 5px;
-    box-shadow: 0 5px 30px 
-    rgba(0, 0, 0, .10);
+  display: flex;
+  flex-wrap: wrap;
+  position: relative;
+  padding: 35px 0 50px;
+  background: #fff;
+  border-radius: 5px;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.1);
 }
 
 .services__item {
-    display: flex;
-    flex-direction: column;
-    width: 25%;
-    padding: 0 25px;
-    margin-bottom: 30px;
+  display: flex;
+  flex-direction: column;
+  width: 25%;
+  padding: 0 25px;
+  margin-bottom: 30px;
 }
 
 .services__title {
-    margin-bottom: 20px;
-    font-size: 24px;
-    font-family: 'Lato', sans-serif;
-    color: #2C2C2C;
-    font-weight: 900;
-    line-height: 1.2;
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-family: "Lato", sans-serif;
+  color: #2c2c2c;
+  font-weight: 900;
+  line-height: 1.2;
 }
 
 .services__text {
-    margin-bottom: 20px;
-    font-size: 15px;
-    color: #585858;
-    line-height: 1.4;
+  margin-bottom: 20px;
+  font-size: 15px;
+  color: #585858;
 }
 
 .services__footer {
-    margin-top: auto;
+  margin-top: auto;
 }
 
 .services__link {
-    display: inline-block;
-    color: #004AF2;
-    font-size: 15px;
-    text-decoration: none;
-    transition: color .2s linear;
+  display: inline-block;
+  color: #004af2;
+  font-size: 15px;
+  text-decoration: none;
+  transition: color 0.2s linear;
 }
 
 .services__link:hover {
-    color: #FF3E2F;
+  color: #ff3e2f;
 }
 
 .services__link::after {
-    content: '';
-    display: block;
-    width: 10px;
-    height: 2px;
-    background-color: #004AF2;
-    transition: width .2s linear;
-    margin-top: 5px;
+  content: "";
+  display: block;
+  width: 10px;
+  height: 2px;
+  background-color: #004af2;
+  transition: width 0.2s linear;
+  margin-top: 5px;
 }
 
 .services__link:hover::after {
-    width: 100%;
-    background-color: #FF3E2F;
+  width: 100%;
+  background-color: #ff3e2f;
 }
 
 .services__mail-title {
-    position: absolute;
-    bottom: 13px;
-    right: 30px;
-    z-index: 1;
-    pointer-events: none;
-    font-family: 'Lato', sans-serif;
-    font-style: normal;
-    font-weight: 900;
-    font-size: 90px;
-    line-height: 1;
-    color: rgba(44, 44, 44, 0.05);
+  position: absolute;
+  bottom: 13px;
+  right: 30px;
+  z-index: 1;
+  pointer-events: none;
+  font-family: "Lato", sans-serif;
+  font-style: normal;
+  font-weight: 900;
+  font-size: 90px;
+  line-height: 1;
+  color: rgba(44, 44, 44, 0.05);
 }
-
 
 /* Clients */
 .clients {
-    display: flex;
+  display: flex;
 }
 
-.clients__logos  {
-    width: 60%;
-    margin-bottom: 60px;
+.clients__logos {
+  width: 60%;
+  margin-bottom: 60px;
 }
 
 .clients__rewiews {
-    width: 40%;
+  width: 40%;
 }
 
 .clients__list {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
 }
 
 .clients__list li {
-    margin-bottom: 50px;
-    margin-right: 40px;
+  margin-bottom: 50px;
+  margin-right: 40px;
 }
 
 .clients__love {
-    display: inline-block;
-    min-height: 47px;
-    color: #464646;
-    font-size: 18px;
-    margin-left: 40px;
-    padding-top: 5px;
-    background: url(../images/heart.svg) no-repeat left 19px top;
+  display: inline-block;
+  min-height: 47px;
+  color: #464646;
+  font-size: 18px;
+  margin-left: 40px;
+  padding-top: 5px;
+  background: url(../images/heart.svg) no-repeat left 19px top;
 }
-
 
 /* Rewiews */
 .rewiews {
-    position: relative;
+  position: relative;
 }
 
 .rewiews::before {
-    content: '';
-    display: block;
-    width: 92px;
-    height: 126px;
+  content: "";
+  display: block;
+  width: 92px;
+  height: 126px;
 
-    background: url(../images/lines.svg) no-repeat;
+  background: url(../images/lines.svg) no-repeat;
 
-    position: absolute;
-    top: -15px;
-    left: 2px;
-    z-index: 1;
+  position: absolute;
+  top: -15px;
+  left: 2px;
+  z-index: 1;
 }
 
 .rewiews__header {
-    display: flex;
-    align-items: center; /* отцентровать вертикаль */
-    margin-bottom: 30px;
+  display: flex;
+  align-items: center; /* отцентровать вертикаль */
+  margin-bottom: 30px;
 }
 
 .rewiews__photo {
-    height: 100px;
-    width: 100px;
-    border-radius: 50%;
-    border: 5px solid #fff;
-    box-shadow: 0 3px 6px rgba(0, 0, 0, .16);
-    position: relative;
-    z-index: 2;
+  height: 100px;
+  width: 100px;
+  border-radius: 50%;
+  border: 5px solid #fff;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16);
+  position: relative;
+  z-index: 2;
 }
 
 .rewiews_header-content {
-    flex-grow: 1;
-    padding-left: 20px;
-    font-family: 'Lato', sans-serif;
+  flex-grow: 1;
+  padding-left: 20px;
+  font-family: "Lato", sans-serif;
 }
 
 .rewiews__name {
-    font-size: 18px;
-    font-weight: 900;
-    color: #2C2C2C;
-
+  font-size: 18px;
+  font-weight: 900;
+  color: #2c2c2c;
 }
 
 .rewiews__company {
-    font-size: 15px;
-    color: #2C2C2C;
+  font-size: 15px;
+  color: #2c2c2c;
 }
 
 .rewiews__content {
-    font-family: 'Lato', sans-serif;
-    line-height: 1.8;
-    font-size: 15px;
-    font-weight: 400;
-    color: #585858;
+  font-family: "Lato", sans-serif;
+  line-height: 1.8;
+  font-size: 15px;
+  font-weight: 400;
+  color: #585858;
 }
 
 .rewiews__content p {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
-
 
 /* Benefits */
 .benefits {
-     display: flex;
+  display: flex;
 }
 
 .benefits__сol {
-    width: 50%;
+  display: flex;
+  align-items: center;
+  width: 50%;
+  align-items: center;
 }
 
 .benefits-list {
-    max-width: 370px;
-    width: 100%;
-    padding-left: 50px;
-    position: relative;
+  max-width: 370px;
+  width: 100%;
+  padding-left: 50px;
+  position: relative;
 
-    background-image: linear-gradient(to bottom, #fff 40%, #a5a5a5 40%);
-    background-size: 2px 30px;
-    background-repeat : repeat-y;
-    background-position: left 12px top 0;
+  background-image: linear-gradient(to bottom, #fff 40%, #a5a5a5 40%);
+  background-size: 2px 30px;
+  background-repeat: repeat-y;
+  background-position: left 12px top 0;
 }
 
 .benefits-list:before,
 .benefits-list:after {
-     content: '';
-     display: block;
-     width: 26px;
-     height: 36px;
+  content: "";
+  display: block;
+  width: 26px;
+  height: 36px;
 
-     background-repeat: no-repeat;
-     background-color: #fff;
-     position: absolute;
-     left: 0;
-     z-index: 1;
+  background-repeat: no-repeat;
+  background-color: #fff;
+  position: absolute;
+  left: 0;
+  z-index: 1;
 }
 
 .benefits-list:before {
-    background-image: url(../images/pin-start.svg);
-    top: -5px;
+  background-image: url(../images/pin-start.svg);
+  top: -5px;
 }
 
 .benefits-list:after {
-    background-image: url(../images/pin-end.svg);
-    bottom: -8px;
+  background-image: url(../images/pin-end.svg);
+  bottom: -8px;
 }
 
 .benefits-list__item:not(:last-child) {
-    margin-bottom: 35px;
+  margin-bottom: 35px;
 }
 
 .benefits-list__title {
-    font-family: 'Lato', sans-serif;
-    font-size: 21px;
-    font-weight: 900;
-    color: #2C2C2C ;
-    line-height: 1.2;
-    margin-bottom: 10px;
+  font-family: "Lato", sans-serif;
+  font-size: 21px;
+  font-weight: 900;
+  color: #2c2c2c;
+  line-height: 1.2;
+  margin-bottom: 10px;
 }
 
 .benefits-list__text {
-    font-size: 15px;
-    font-weight: 400;
-    font-family: 'PT Sans', sans-serif;
-    color: #585858 ;
+  font-size: 15px;
+  font-weight: 400;
+  font-family: "PT Sans", sans-serif;
+  color: #585858;
 }
-
-.img--skrugl {
-    border-radius: 5px;
-}
-
 
 /* Team */
 .team {
-    display: flex;
-    flex-wrap: wrap;
-    margin: 0 -15px;
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0 -15px;
 }
 
 .team__col {
-    width: 33.3333%;
-    padding: 0 15px;
+  width: 33.3333%;
+  padding: 0 15px;
+}
+
+.team--photo {
+  box-shadow: 10px 5px 13px rgba(0, 0, 0, 0.16);
+  margin-bottom: 13px;
+}
+
+.team__mane {
+  font-size: 18px;
+  font-family: "Lato", sans-serif;
+  line-height: 1.2;
+  font-weight: 900;
+  color: #2c2c2c;
+  margin-bottom: 5px;
+}
+
+.team__prof {
+  font-size: 15px;
+  color: #585858;
+  margin-bottom: 11px;
+}
+
+.team__contacts {
+  font-size: 14px;
+  color: #585858;
+  line-height: 1;
+}
+
+.team__contacts li {
+  margin-bottom: 9px;
+}
+
+.team__contacts a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.team__contacts a:hover {
+  text-decoration: underline;
+}
+
+.team__contacts-item {
+  width: 16px;
+  margin-right: 7px;
 }
