--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,6 +43,10 @@ ol {
   border-radius: 5px;
 }
 
+.text-centr {
+    text-align: center;
+}
+
 /* container */
 .container {
   width: 100%;
@@ -562,4 +566,64 @@ ol {
 .team__contacts-item {
   width: 16px;
   margin-right: 7px;
+}
+
+
+/* Mission */
+.mission {
+    padding: 60px 30px;
+    margin-bottom: 30px;
+    position: relative;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.16);
+    text-align: center ;
+}
+
+.mission::before,
+.mission::after {
+    content: "";
+    display: block;
+    width: 41.66666%; 
+    height: 2px;
+    position: absolute;
+    bottom: 0;
+    z-index: 1;
+}
+
+.mission::before {
+     background-color: #004AF2;
+     right: 50%;
+}
+
+.mission::after {
+    background-color: #FC2C2B;
+    left: 50%;
+}
+
+.mission-title {
+    font-family: 'Lato', sans-serif;
+    text-transform: uppercase;
+    font-weight: 900;
+    font-size: 90px;
+    line-height: 0.5;
+    padding-top: 20px;
+    text-align: center;
+    color: rgba(0, 0, 0, 0.05);
+}
+
+.mission__title {
+    margin-bottom: 5px;
+    font-family: 'Lato', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
+    line-height: 1.2;
+    color: #004AF2;
+}
+
+.mission__subtext {
+    font-family: 'Lato', sans-serif;
+    font-size: 21px;
+    font-weight: 400;
+    color: #585858;
 }
