--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ ol {
 }
 
 .text-centr {
-    text-align: center;
+  text-align: center;
 }
 
 /* container */
@@ -568,62 +568,102 @@ ol {
   margin-right: 7px;
 }
 
-
 /* Mission */
 .mission {
-    padding: 60px 30px;
-    margin-bottom: 30px;
-    position: relative;
-    background-color: #fff;
-    border-radius: 5px;
-    box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.16);
-    text-align: center ;
+  padding: 60px 30px;
+  margin-bottom: 30px;
+  position: relative;
+  background-color: #fff;
+  border-radius: 5px;
+  box-shadow: 0px 5px 30px rgba(0, 0, 0, 0.16);
+  text-align: center;
 }
 
 .mission::before,
 .mission::after {
-    content: "";
-    display: block;
-    width: 41.66666%; 
-    height: 2px;
-    position: absolute;
-    bottom: 0;
-    z-index: 1;
+  content: "";
+  display: block;
+  width: 41.66666%;
+  height: 2px;
+  position: absolute;
+  bottom: 0;
+  z-index: 1;
 }
 
 .mission::before {
-     background-color: #004AF2;
-     right: 50%;
+  background-color: #004af2;
+  right: 50%;
 }
 
 .mission::after {
-    background-color: #FC2C2B;
-    left: 50%;
+  background-color: #fc2c2b;
+  left: 50%;
 }
 
 .mission-title {
-    font-family: 'Lato', sans-serif;
-    text-transform: uppercase;
-    font-weight: 900;
-    font-size: 90px;
-    line-height: 0.5;
-    padding-top: 20px;
-    text-align: center;
-    color: rgba(0, 0, 0, 0.05);
+  font-family: "Lato", sans-serif;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 90px;
+  line-height: 0.5;
+  padding-top: 20px;
+  text-align: center;
+  color: rgba(0, 0, 0, 0.05);
 }
 
 .mission__title {
-    margin-bottom: 5px;
-    font-family: 'Lato', sans-serif;
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 1.2;
-    color: #004AF2;
+  margin-bottom: 5px;
+  font-family: "Lato", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #004af2;
 }
 
 .mission__subtext {
-    font-family: 'Lato', sans-serif;
-    font-size: 21px;
-    font-weight: 400;
-    color: #585858;
+  font-family: "Lato", sans-serif;
+  font-size: 21px;
+  font-weight: 400;
+  color: #585858;
+}
+
+/* News */
+.news {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between; /* что бы 1 новость была слева. 2 справа */
+}
+
+.news__item {
+  width: 100%;
+  max-width: 500px;
+}
+
+.news__title {
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 1.2;
+  margin-bottom: 15px;
+}
+
+.news__title a {
+  text-decoration: none;
+  color: #2c2c2c;
+}
+
+.news__title a:hover {
+  text-decoration: underline;
+}
+
+.news__text {
+  font-weight: 400;
+  font-size: 15px;
+  color: #585858;
+  margin-bottom: 15px;
+}
+
+.news__data {
+  display: block;
+  font-size: 12px;
+  color: #6e6e6e;
 }
