--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@ body {
   background-color: #fff;
 }
 
+body.no-scroll {
+  overflow: hidden;
+}
+
 *,
 *:before,
 *:after {
@@ -181,7 +185,6 @@ ol {
 .input {
   display: block;
   width: 100%;
-  background: none;
   border: none;
   padding-left: 50px;
   padding-bottom: 12px;
@@ -213,6 +216,31 @@ ol {
   background: url(../images/mail-icon.svg) left 15px top 7px no-repeat;
 }
 
+.input--dark {
+  border-bottom-color: #e8e8e8;
+  color: #2c2c2c;
+}
+
+.input--dark::placeholder {
+  color: #2c2c2c;
+}
+
+.input--dark:focus {
+  border-bottom-color: #a5a5a5;
+}
+
+.input--dark.input--user {
+  background-image: url(../images/user-black-icon.svg);
+}
+
+.input--dark.input--phone {
+  background-image: url(../images/phone-black-icon.svg);
+}
+
+.input--dark.input--email {
+  background-image: url(../images/mail-black-icon.svg);
+}
+
 /* Btn */
 .btn {
   padding: 15px 45px;
@@ -237,7 +265,17 @@ ol {
 }
 
 .btn--orange {
-  background-image: linear-gradient(90deg, #ff903e 0%, #ff2c2c 100%);
+  background-image: linear-gradient(to right, #f5af19, #f12711, #f5af19);
+  transition: 0.5s;
+  background-size: 200%;
+}
+
+.btn--orange:hover {
+  background-position: right;
+}
+
+.btn--shadow {
+  box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.2);
 }
 
 /* Section */
@@ -628,42 +666,197 @@ ol {
 }
 
 /* News */
-.news {
+.articles {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between; /* что бы 1 новость была слева. 2 справа */
+  margin-bottom: 30px;
 }
 
-.news__item {
+.articles__item {
   width: 100%;
   max-width: 500px;
+  margin-bottom: 20px;
 }
 
-.news__title {
+.articles__title {
   font-weight: 900;
   font-size: 18px;
   line-height: 1.2;
   margin-bottom: 15px;
 }
 
-.news__title a {
+.articles__title a {
   text-decoration: none;
   color: #2c2c2c;
 }
 
-.news__title a:hover {
+.articles__title a:hover {
   text-decoration: underline;
 }
 
-.news__text {
+.articles__text {
   font-weight: 400;
   font-size: 15px;
   color: #585858;
   margin-bottom: 15px;
 }
 
-.news__data {
+.articles__data {
   display: block;
   font-size: 12px;
   color: #6e6e6e;
+}
+
+/* Footer */
+.footer {
+  padding: 40px 0;
+  margin-top: 60px;
+  background-color: #f9f9f9;
+  background-image: url(../images/tire-left.svg), url(../images/tire-right.svg);
+  background-repeat: no-repeat;
+  background-position: left -50px bottom -80px, right -50px bottom -80px;
+  text-align: center;
+}
+
+.footer__contacts {
+  margin: 25px 0;
+  color: #585858;
+  font-size: 12px;
+  font-weight: 700;
+  font-style: normal;
+  margin-bottom: 25px;
+}
+
+.footer__contacts p {
+  margin: 0 0 5px;
+}
+
+.footer__contacts a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.footer__contacts a:hover {
+  text-decoration: underline;
+}
+
+.footer__nav {
+  font-size: 12px;
+}
+
+.footer__nav a {
+  margin: 0 5px;
+  color: #004af2;
+  text-decoration: none;
+}
+
+.footer__nav a:hover {
+  text-decoration: underline;
+}
+
+/* Modals */
+.modal {
+  display: none ;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+
+  background-color: rgba(0, 0, 0, 0.9);
+
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 2000;
+}
+
+.modal.show {
+    display: flex;
+}
+
+.modal__inner {
+  position: relative;
+  width: 400px;
+  padding: 25px;
+  background-color: #fff;
+}
+
+.modal__header {
+  text-align: center;
+  margin-bottom: 25px;
+}
+
+.modal__title {
+  font-family: "Lato", sans-serif;
+  font-weight: 900;
+  font-size: 24px;
+  color: #004af2;
+  line-height: 1.2;
+}
+
+.modal__text {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 2;
+  color: #2c2c2c;
+}
+
+.modal__footer {
+  margin-top: 25px;
+  padding-top: 25px;
+  border-top: 1px solid #e8e8e8;
+  text-align: center;
+}
+
+.modal__footer-title {
+  font-family: "Lato", sans-serif;
+  font-weight: 900;
+  font-size: 18px;
+  line-height: 1.2;
+  color: #2c2c2c;
+  margin-bottom: 10px;
+}
+
+.modal__contacts {
+  font-weight: 400;
+  font-size: 15px;
+  color: #2c2c2c;
+  font-style: normal;
+  line-height: 0.9;
+}
+
+.modal__contacts a {
+  text-decoration: none;
+  color: inherit;
+}
+
+.modal__contacts a:hover {
+  text-decoration: underline;
+}
+
+.modal__close {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  top: -20px;
+  right: -30px;
+  z-index: 1;
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  transition: transform .2s linear;
+}
+
+.modal__close:hover {
+    transform: rotate(90deg);
+}
+
+.modal__close img {
+    display: block;
+}
+
+.modal__icon {
+    margin-bottom: 10px;
 }
