--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,10 @@ ol {
   text-decoration: none;
 }
 
+.nav__link:not(.active):hover {
+    text-decoration: underline;
+}
+
 .nav__link.active {
   background-color: #004af2;
 }
@@ -105,11 +109,14 @@ ol {
 }
 
 .intro--blog {
-    background: #000 url(../images/blog-bg.jpg) no-repeat center;
-    height: 350px;
-    background-size: cover;
-
-
+  background: linear-gradient(
+      to top,
+      rgba(27, 27, 27, 0.3),
+      rgba(19, 19, 19, 0.3)
+    ),
+    url(../images/blog-bg.jpg) no-repeat center;
+  height: 350px;
+  background-size: cover;
 }
 
 .intro__inner {
@@ -169,14 +176,16 @@ ol {
 }
 
 .reqest-form__title {
-  font-family: "lato" sans-serif;
+  font-family: "lato", sans-serif;
   font-size: 30px;
   font-weight: 900;
   color: #fff;
 }
 
 .reqest-form__text {
+    margin-top: 5px;
   font-size: 15px;
+  font-weight: 400;
   color: #fff;
 }
 
@@ -681,6 +690,15 @@ ol {
   margin-bottom: 30px;
 }
 
+.articles--column {
+  flex-direction: column;
+}
+
+.articles--column .articles__item {
+  max-width: none;
+  margin-bottom: 45px;
+}
+
 .articles__item {
   width: 100%;
   max-width: 500px;
@@ -765,7 +783,7 @@ ol {
 
 /* Modals */
 .modal {
-  display: none ;
+  display: none;
   justify-content: center;
   align-items: center;
   width: 100%;
@@ -780,7 +798,7 @@ ol {
 }
 
 .modal.show {
-    display: flex;
+  display: flex;
 }
 
 .modal__inner {
@@ -854,17 +872,30 @@ ol {
   border: none;
   padding: 0;
   cursor: pointer;
-  transition: transform .2s linear;
+  transition: transform 0.2s linear;
 }
 
 .modal__close:hover {
-    transform: rotate(90deg);
+  transform: rotate(90deg);
 }
 
 .modal__close img {
-    display: block;
+  display: block;
 }
 
 .modal__icon {
-    margin-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+/* Main */
+.main {
+  display: flex;
+}
+
+.main__col {
+  width: 50%;
+}
+
+.main_col--right {
+  margin-left: auto;
 }
