--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,6 +119,17 @@ ol {
   background-size: cover;
 }
 
+.intro--text {
+  background: linear-gradient(
+      to top,
+      rgba(27, 27, 27, 0.4),
+      rgba(19, 19, 19, 0.4)
+    ),
+    url(../images/text-bg.jpg) no-repeat center;
+  height: 350px;
+  background-size: cover;
+}
+
 .intro__inner {
   height: 600px;
   display: flex;
@@ -902,4 +913,47 @@ ol {
 
 .main_col--right {
   margin-left: auto;
+}
+
+
+/* Text */
+.text {
+  width: 890px;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #585858;
+  margin-bottom: 50px; 
+}
+
+.text p {
+  margin: 20px 0;
+}
+
+.text h3,
+.text h4 {
+  margin: 20px 0;
+  font-weight: 900;
+  font-size: 24px;
+  color: #2c2c2c;
+}
+
+.text ol {
+  list-style: decimal;
+  list-style-position: inside;
+}
+
+.text hr {
+  display: block;
+  width: 100%;
+  margin: 30px 0;
+  height: 1px;
+  border: 0;
+  background-color: #dddddd;
+}
+
+.text img {
+  display: block;
+  max-width: 100%;
+  height: auto;
 }
