--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -103,7 +103,7 @@ ol {
   color: #fff;
   text-decoration: none;
 
-  transition: background .3s linear;
+  transition: background .2s linear;
 }
 
 .nav__link:not(.active):hover {
@@ -125,9 +125,10 @@ ol {
 /* Intro */
 .intro {
   margin-bottom: 30px;
-  background: #000 url(../images/intro-bg2.jpg) no-repeat center;
-  background-size: cover;
+  position: relative;
+  background: #000;
 }
+
 
 .intro--blog {
   background: linear-gradient(
@@ -139,7 +140,7 @@ ol {
   height: 350px;
   background-size: cover;
 }
-
+ 
 .intro--text {
   background: linear-gradient(
       to top,
@@ -156,12 +157,72 @@ ol {
   display: flex;
   align-items: flex-end;
   justify-content: space-between;
+  position: relative;
+  z-index: 2;
 }
 
 .intro__text {
   text-align: right;
   margin-bottom: 45px;
 }
+
+.intro__slider {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  top: 0;
+  left: 0;
+  z-index: 1;
+}
+
+.intro__slider,
+.slick-list,
+.intro__slider,
+.slick-track {
+  height: 100%;
+}
+
+.intro__slider-photo {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+}
+
+.intro__slider-arrow {
+  position: absolute;
+  bottom: 30px;
+  left: 430px;
+}
+
+
+.intro__slider-btn {
+  width: 0;
+  height: 0;
+  padding: 0;
+
+  color: transparent;
+  font-size: 0;
+  margin: 0 3px;
+  cursor: pointer;
+
+  background: none;
+}
+
+.intro__slider-btn--prev {
+  border-style: solid;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #ffffff   transparent transparent;
+}
+
+.intro__slider-btn--next {
+border-width: 10px 0 10px 10px;
+border-color: transparent transparent transparent #ffffff;
+border-style: solid;
+}
+
 
 .intro__countries {
   color: #fff;
@@ -846,6 +907,10 @@ ol {
   max-width: 400px;
   padding: 25px;
   background-color: #fff;
+
+  opacity: 0;
+  transform: scale(0.5);
+  transition: transform .2s ease-out, opacity .2s ease-out;
 }
 
 .modal__header {
@@ -917,6 +982,10 @@ ol {
 
 .modal__close:hover {
   transform: rotate(90deg);
+}
+
+.modal__close:focus {
+  outline: none;
 }
 
 .modal__close img {
