--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1452,7 +1452,10 @@ body.show-nav .header {
   .clients__list li {
       max-width: 130px;
   }
-
+  
+  .intro__slider-arrows {
+    display: none;
+}
 
   /* Footer */
   .footer {
@@ -1483,8 +1486,8 @@ body.show-nav .header {
   /* Nav */
   .nav {
       width: 100%;
-      height: auto;
-      min-height: calc(100vh - 50px);
+      height: calc(100vh - 50px);
+      overflow: auto;
       flex-direction: column;
       padding-top: 9px;
 
@@ -1542,10 +1545,6 @@ body.show-nav .header {
 
   .intro__title-amp {
       font-size: 100px;
-  }
-
-  .intro__slider-arrows {
-      display: none;
   }
 
 
