--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -391,6 +391,9 @@ body.show-nav .header {
   width: 100%;
   padding-bottom: 12px;
   padding-left: 50px;
+  border-radius: 0;
+  appearance: none;
+  box-shadow: none;
 
   background: none;
   border: none;
